Added investment based calculations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
 <div class="d-flex gap-2 justify-content-center py-5">
-<a class="btn btn-primary rounded-pill px-3" href="swp.html">SWP</a>
+<a class="btn btn-primary rounded-pill px-1" href="swp.html">SWP</a>
+<a class="btn btn-primary rounded-pill px-1" href="inflation.html">Inflation</a>
+<a class="btn btn-primary rounded-pill px-1" href="investmentBased.html">Investment Based</a>
 </div>
 </body>
 </html>
