--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-<div class="d-flex gap-2 justify-content-center py-5">
-<a class="btn btn-primary rounded-pill px-1" href="swp.html">SWP</a>
-<a class="btn btn-primary rounded-pill px-1" href="inflation.html">Inflation</a>
-<a class="btn btn-primary rounded-pill px-1" href="investmentBased.html">Investment Based</a>
-</div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="swp.html">SWP</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="inflation.html">Inflation</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="investmentBased.html">Investment Based</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 </body>
+<h1 class="text-center m-5">Nothing to see here! Move Along.</h1>
 </html>
