--- a/investmentBased.html
+++ b/investmentBased.html
@@ -7,9 +7,32 @@
     <script src="commonJs.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="swp.html">SWP</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="inflation.html">Inflation</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Investment Based <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div class="container">
     <div class="row">
-        <p class="m-2">Calculating final corpus from different set of investments</p>
+        <p class="m-2 text-center">Calculating final corpus from different set of investments</p>
         <div class="col-sm-6 col-sm-offset-3 py-2">
             <div class="card m-1">
                 <div class="card-body">
@@ -58,7 +81,7 @@
                         <label for="mfBalance" class="form-label">Mutual Funds Balance</label>
                     </form>
                     <form class="form-floating py-1">
-                        <input type="number" class="form-control" id="mfReturn" value="12">
+                        <input type="number" class="form-control" id="mfReturn" value="10">
                         <label for="mfReturn">Mutual Funds Return %</label>
                     </form>
                     <form class="form-floating py-1">
